# PrintWatch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
assets/: vector-icon.eps
docs/: BUDDYCAM_API.md  EMULATOR_SETUP.md
plans/: 2026-05-25_printwatch.md  2026-05-27_bambulab-adapter.md  2026-05-27_buddycam-snapshots.md
proxy/: Dockerfile  __init__.py  config.example.yaml  config.py  docker-compose.yaml  model_names.py  models.py  poller.py  proxy.py  requirements.txt  server.py  snapshot.py
proxy/adapters/: __init__.py  bambulab.py  moonraker.py  prusalink.py
proxy/tests/: test_adapters.py  test_config.py  test_models.py  test_server.py  test_snapshot.py
proxy/tests/fixtures/: bambulab_report_idle.json  bambulab_report_printing.json  moonraker_objects_idle.json  moonraker_objects_printing.json  prusalink_status_idle.json  prusalink_status_printing.json
resources/: PrintWatch.r  PrintWatchIcons.r
scripts/: create_placeholder_icons.py  doctor.sh  fetch-deps.sh  generate_icons.py  run-basiliskii.sh  setup.sh
specs/: SPEC.md
src/: MacTCP.h  TCPHi.c  TCPHi.h  TCPRoutines.c  TCPRoutines.h  config.c  config.h  icon_map.inc  icons.c  icons.h  json.c  json.h  main.c  network.c  network.h  printers.c  printers.h  snapshot.c  snapshot.h  ui.c  ui.h
tests/: Makefile  test_json.c  test_printers.c
