[project]
name = "printwatch-proxy"
version = "0.1.0"
description = "Polling proxy that bridges 3D printer APIs for the PrintWatch Mac SE client"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
printwatch-proxy = "proxy.proxy:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
