[project]
name = "printwatch-proxy"
version = "1.1.0"
description = "Polling proxy that bridges 3D printer APIs for the PrintWatch Mac SE client"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
printwatch-proxy = "proxy.proxy:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy"]

[dependency-groups]
dev = [
    "pillow>=10.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
]
